roles/openshift_argo_rollouts/docs/examples/canary-istio/workload/canary-demo-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: canary-demo
    spec:
      containers:
      - name: canary-demo
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: canary-demo-canary
      stableService: canary-demo-stable
      trafficRouting:
        istio:
          virtualService:
            name: canary-demo
            routes:
            - primary
      steps:
      - setWeight: 10
      - pause: {}         # pause indefinitely
      - setWeight: 20
      - pause: {duration: 5s}
      - setWeight: 30
      - pause: {duration: 5s}
      - setWeight: 40
      - pause: {duration: 5s}
      - setWeight: 50
      - pause: {duration: 5s}
      - setWeight: 60
      - pause: {duration: 5s}
      - setWeight: 70
      - pause: {duration: 5s}
      - setWeight: 80
      - pause: {duration: 5s}
      - setWeight: 90
      - pause: {duration: 5s}
