roles/openshift_argo_rollouts/docs/examples/canary-istio/workload/canary-demo-canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: canary-demo
