roles/openshift_argo_rollouts/docs/examples/canary-istio/workload/canary-demo-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: canary-demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
